gobmkida/g3/make_domains
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_domains/src/engine/optics.c:630:17: error: assigning to 'struct eyevalue' from incompatible type 'int'
b_eye[v5].value = 0; 
                ^ ~
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_domains/src/engine/optics.c:634:12: error: expected expression
*( _OWORD *)&b_eye[v5].color = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_domains/src/engine/optics.c:634:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b_eye[v5].color = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_domains/src/engine/optics.c:638:17: error: assigning to 'struct eyevalue' from incompatible type 'int'
w_eye[v5].value = 0; 
                ^ ~
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_domains/src/engine/optics.c:642:12: error: expected expression
*( _OWORD *)&w_eye[v5].color = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_domains/src/engine/optics.c:642:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&w_eye[v5].color = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_domains/src/engine/optics.c:809:100: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)&v25->esize = _mm_unpacklo_epi32( _mm_cvtsi32_si128( esize), _mm_cvtsi32_si128( msize)).m128i_u64[0]; 
                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_domains/src/engine/optics.c:827:100: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)&v27->esize = _mm_unpacklo_epi32( _mm_cvtsi32_si128( esize), _mm_cvtsi32_si128( msize)).m128i_u64[0]; 
                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
8 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_domains/src/obj/1/optics.o] Error 1
